--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">imgcreater</string>
     <string name="create_img">画像を生成する</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="regenerate">画像を再生成する</string>
+    <string name="save_img">画像を保存する</string>
 </resources>
