リザルト画面にバックボタンを追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="regenerate">画像を再生成する</string>
     <string name="save_img">画像を保存する</string>
+    <string name="back_button">backButton</string>
+    <string name="result_image">resultImage</string>
 </resources>
