--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="back_button">backButton</string>
     <string name="result_image">resultImage</string>
     <string name="generate_image">generate_image</string>
+    <string name="loading_text">画像を生成中です。\nしばらくお待ちください。</string>
 </resources>
