文字列をstrings.xmlに定義し、使用するように修正

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="loading_text">画像を生成中です。\nしばらくお待ちください。</string>
     <string name="generate_faild_message">画像が生成できませんでした。電場の良い場所で再度お試しください。</string>
     <string name="search_word_label">検索ワード</string>
+    <string name="please_enter_a_letter">文字を入力してください</string>
+    <string name="yes">はい</string>
 </resources>
